[tool.poetry]
name = "black-butler"
version = "0.1.0"
description = "Telegram Bot Helper with smart house and"
authors = ["Sergey Natalenko <sergey.natalenko@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiomisc = "^17.5.19"
aiomisc-dependency = "^0.1.20"
aiogram-dialog = "^2.1.0"
SQLAlchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
opencv-python = "^4.9.0.80"
aiohttp = "^3.9.5"
argclass = "^1.0.3"
litestar = {extras = ["jinja"], version = "^2.8.3"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.6"
mypy = "^1.10.0"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
